--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -43,7 +43,8 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-
+        cache-dependency-path: './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/package-lock.json'
+        
     - name: npm install express server
       working-directory: './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
       run: |
