--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -25,7 +25,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: nvmassignment1     # set this to your application's name
+  AZURE_WEBAPP_NAME: nvmassignment1lin     # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: 'Node/WEB'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x'                # set this to the node version to use
 
@@ -85,5 +85,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.LINUX_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
