--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -20,7 +20,10 @@ name: Deploy DotNet project to Azure Function App
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
+    paths:
+      - "Node/API/**"
+  workflow_dispatch:
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'nvmf23-as2'   # set this to your function app name on Azure
