--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
     environment: dev
     steps:
 
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v3
+      
     - name: Log in to Azure
       uses: azure/login@v1
       with:
