--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -16,13 +16,13 @@
 #
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples/tree/master/FunctionApp
 
-name: Deploy DotNet project to Azure Function App
+name: Deploy DotNet project to (nvmf23-as2) Azure Function App
 
 on:
   push:
     branches: [ "main" ]
     paths:
-      - "Node/API/**"
+      - "C_Sharp/API/**"
   workflow_dispatch:
 
 env:
