--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -22,7 +22,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - "C_Sharp/API/**"
+      - "C_Sharp/API1/**"
   workflow_dispatch:
 
 env:
