--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
         acrName: nvmacrwatm
         containerAppName: nvmtestcontainerapp
         resourceGroup: Assignment2
-        environmentVariables: Secret3=secret3 MyStorageConnectionAppSetting=MyStorageConnectionAppSetting
+        environmentVariables: Secret3=secretref:secret3 MyStorageConnectionAppSetting=secretref:MyStorageConnectionAppSetting
