--- a/.github/workflows/azure-functions-app-nodejs.yml
+++ b/.github/workflows/azure-functions-app-nodejs.yml
@@ -27,7 +27,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'nvmtestnode'   # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_NAME: 'nvmtest2'   # set this to your function app name on Azure
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'Node/API1'       # set this to the path to your function app project, defaults to the repository root
   NODE_VERSION: '16.x'                      # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
 
