--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -51,7 +51,7 @@ jobs:
         npm install
 
     - name: npm install react frontend
-      working-directory: './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/frontend'
+      working-directory: './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}frontend'
       run: |
         npm install
         npm run build
